--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/pruebaproyecto
 spring.datasource.username=postgres
-spring.datasource.password=desarrollo
+spring.datasource.password=jesi1998
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 
