--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=9898
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/pruebaproyecto
+spring.datasource.url=jdbc:postgresql://localhost:5432/proyecto
 spring.datasource.username=postgres
 spring.datasource.password=jesi1998
 spring.datasource.initialization-mode=always
