--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,18 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-        
+	 <dependency>
+	  <groupId>com.h2database</groupId>
+	  <artifactId>h2</artifactId>
+	  <version>1.4.200</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.projectlombok</groupId>
+	  <artifactId>lombok</artifactId>
+	  <version>1.18.12</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
